<resources>
    <string name="app_name">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_tool">Tools</string>
    <string name="menu_chart">Chart</string>
    <string name="menu_view_list">List</string>
    <string name="menu_home">Home</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_cloud">Upload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_home">Home</string>
</resources>
