<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view_list"
            android:icon="@drawable/ic_menu_view_list"
            android:title="@string/menu_view_list" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_menu_chart"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/nav_tool"
            android:icon="@drawable/ic_menu_tool"
            android:title="@string/menu_tool" />
    </group>

    <item android:title="@string/menu_setting">
        <menu>
            <item
                android:id="@+id/nav_cloud"
                android:icon="@drawable/ic_menu_cloud"
                android:title="@string/menu_cloud" />
        </menu>
    </item>

</menu>
